# kpasswd

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
config/: kpasswd
src/: main.rs
