[package]
name = "kpasswd"
version = "0.1.0"
edition = "2021"

[dependencies]
kanidm_client = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
rpassword = "7.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
users = "0.11"
clap = { version = "4.5.47", features = ["derive"] }
kanidm_proto = "1.7.3"
serde_json = "1.0.143"
